src/objects/ORDO_Bus_Transit__c.object
<CustomObject>
    <fields>
        <fullName>Bus_Line__c</fullName>
        <label>Bus Line</label>
        <referenceTo>ORDO_Bus_Line__c</referenceTo>
        <relationshipLabel>Bus Transit</relationshipLabel>
        <relationshipName>Bus_Transit</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Bus__c</fullName>
        <label>Bus</label>
        <referenceTo>ORDO_Bus__c</referenceTo>
        <relationshipLabel>Bus Transit</relationshipLabel>
        <relationshipName>Bus_Transit</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Driver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Driver</label>
        <referenceTo>User</referenceTo>
        <relationshipLabel>Transits</relationshipLabel>
        <relationshipName>Bus_Transit</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Bus Transit</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Bus  Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Bus Transit</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>